--- a/src/app/dialogs/privacy/terms-of-use/terms-of-use.component.scss
+++ b/src/app/dialogs/privacy/terms-of-use/terms-of-use.component.scss
@@ -1,3 +1,10 @@
-.policy-link{
-    text-decoration-line: underline;
-}
+.policy-link {
+    color: #4dabf7;
+    text-decoration: none;
+    cursor: pointer;
+    font-size: 14px;
+    
+    &:hover {
+      text-decoration: underline;
+    }
+  }
