--- a/src/app/ui/components/footer/footer.component.html
+++ b/src/app/ui/components/footer/footer.component.html
@@ -39,7 +39,9 @@
           <!-- <li><a [routerLink]="['/faq']" class="text-decoration-none mb-2 d-block">FAQ</a></li>
           <li><a [routerLink]="['/shipping']" class="text-decoration-none mb-2 d-block">Shipping Information</a></li> -->
           <li><a [routerLink]="['/contact']" class="text-decoration-none mb-2 d-block">Contact</a></li>
+          <li><li><a [routerLink]="['/cookie-policy']" class="text-decoration-none mb-2 d-block">Cookie Policy</a></li>
           <li><app-privacy-policy>Privacy Policy</app-privacy-policy></li>
+          <li><app-terms-of-use>Terms Of Use</app-terms-of-use></li>
         </ul>
       </div>
 
